--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -23,7 +23,8 @@ http {
         root                    /service;
         index                   index.html;
 
-        client_max_body_size    1m;
+        client_max_body_size    1m
+        add_header Content-Security-Policy "frame-ancestors 'none'";
 
         error_page 404 =200     /index.html;
         error_page              500 502 503 504  /50x.html;
