--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -24,6 +24,7 @@ http {
         index                   index.html;
 
         client_max_body_size    1m;
+        # TODO: move to helm chart and make configurable
         add_header Content-Security-Policy "frame-ancestors 'none'";
 
         error_page 404 =200     /index.html;
