docs: rename 'taito secrets' and 'taito env rotate'

--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "clean:storage": "if [ ${taito_env} = 'local' ] && [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
     "db-deploy": "npm run generate-db-classes",
     "generate-db-classes": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate ]; then taito ${taito_options} exec:server ./generate; fi",
-    "info:local": "yes | taito ${taito_options} secrets:${taito_env}",
-    "info": "yes | taito ${taito_options} secrets:${taito_env} | grep ': '",
-    "info_todo_comment": "TODO autoconfirm on taito secrets:prod",
+    "info:local": "yes | taito ${taito_options} secret show:${taito_env}",
+    "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
     "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:graphql lint:server lint:worker lint:www ",
     "lint:admin": "cd admin && npm run lint",
     "lint:client": "cd client && npm run lint",
