--- a/package.json
+++ b/package.json
@@ -152,11 +152,11 @@
     "url": "git+https://github.com/TaitoUnited/full-stack-template.git"
   },
   "devDependencies": {
-    "@commitlint/cli": "8.1.0",
-    "@commitlint/config-conventional": "8.1.0",
-    "git-branch-is": "^3.0.0",
-    "husky": "^3.0.4",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "git-branch-is": "^3.1.0",
+    "husky": "^3.1.0",
     "npm-run-all": "~4.1.5",
-    "semantic-release": "^15.13.24"
+    "semantic-release": "^15.14.0"
   }
 }
