--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
     {
       "type": "node",
       "request": "attach",
-      "name": "Attach to server process",
+      "name": "Attach to Node.js server process",
       "address": "localhost",
       "port": 9229,
       "protocol": "inspector",
@@ -12,7 +12,19 @@
       "restart": true,
       "localRoot": "${workspaceFolder}/server",
       "remoteRoot": "/service"
+    },
+    {
+      "name": "Attach to python server process",
+      "type": "python",
+      "request": "attach",
+      "pathMappings": [
+        {
+          "localRoot": "${workspaceFolder}/alternatives/flask-server",
+          "remoteRoot": "/service"
+        }
+      ],
+      "port": 9229,
+      "host": "localhost"
     }
   ]
 }
-
