--- a/alternatives/server-flask/Dockerfile
+++ b/alternatives/server-flask/Dockerfile
@@ -14,7 +14,7 @@ RUN apk add --update-cache \
 WORKDIR /service
 
 COPY ${SERVICE_DIR}/requirements-dev.txt /service/
-RUN pip3 install --upgrade pip && pip3 install -r requirements-dev.txt
+RUN pip3 install --upgrade pip && pip3 install -r requirements-dev.txt && pip3 install ptvsd
 
 EXPOSE 8080
-CMD eval $DC_COMMAND; flask run --host $API_BINDADDR --port $API_PORT --no-debugger
+CMD eval $DC_COMMAND; python -m ptvsd --host 0.0.0.0 --port 9229 -m flask run --host $API_BINDADDR --port $API_PORT --no-debugger
