--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@sentry/node": "^5.6.2",
     "aws-sdk": "^2.517.0",
+    "axios": "^0.19.2",
     "boom": "7.3.0",
     "bunyan": "1.8.12",
     "koa": "2.11.0",
@@ -25,8 +26,6 @@
     "moment-timezone": "0.5.26",
     "mustache": "^3.0.2",
     "pg-promise": "^9.1.0",
-    "request": "2.88.0",
-    "request-promise": "4.2.4",
     "showdown": "1.9.0",
     "stack-trace": "0.0.10",
     "unescape": "1.0.1",
@@ -48,8 +47,6 @@
     "@types/mustache": "0.8.32",
     "@types/node": "^12.7.2",
     "@types/pg": "^7.11.0",
-    "@types/request": "2.48.2",
-    "@types/request-promise": "4.1.44",
     "@types/showdown": "1.9.3",
     "@types/stack-trace": "0.0.29",
     "@types/uuid": "3.4.5",
