--- a/client/package.json
+++ b/client/package.json
@@ -102,7 +102,7 @@
     "webpack-bundle-analyzer": "3.4.1",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
-    "webpack-pwa-manifest": "4.0.0",
+    "webpack-pwa-manifest": "^4.2.0",
     "workbox-webpack-plugin": "4.3.1"
   }
 }
