--- a/admin/package.json
+++ b/admin/package.json
@@ -14,58 +14,58 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.3.3",
-    "@material-ui/icons": "4.2.1",
+    "@material-ui/icons": "^4.9.1",
     "@types/history": "^4.7.3",
-    "@types/qs": "6.5.3",
+    "@types/qs": "^6.9.3",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/redux-actions": "2.6.1",
     "@types/styled-components": "4.1.18",
-    "axios": "0.19.0",
+    "axios": "^0.19.2",
     "core-js": "^3.2.1",
-    "history": "4.9.0",
+    "history": "^4.10.1",
     "qs": "^6.8.0",
     "ra-input-rich-text": "2.9.3",
     "ra-language-english": "2.9.3",
-    "react": "16.8.0",
+    "react": "^16.13.1",
     "react-admin": "2.9.6",
-    "react-dom": "16.8.0",
+    "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.11",
     "react-redux": "5.0.7",
     "redux-actions": "2.6.5",
-    "redux-saga": "1.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "4.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "7.5.5",
-    "@babel/core": "7.5.5",
-    "@babel/plugin-proposal-class-properties": "7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/preset-env": "7.5.5",
-    "@babel/preset-react": "7.0.0",
-    "@babel/preset-typescript": "7.3.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.2",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "8.0.6",
-    "babel-plugin-dynamic-import-node": "2.3.0",
-    "babel-plugin-macros": "2.6.1",
-    "babel-plugin-styled-components": "1.10.6",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-macros": "^2.8.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
-    "css-loader": "3.2.0",
+    "css-loader": "^3.5.3",
     "eslint": "^5.10",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-standard": "^14.0.1",
     "eslint-loader": "^3.0.0",
-    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "9.1.0",
-    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-standard": "^4.0.1",
@@ -73,14 +73,14 @@
     "fork-ts-checker-webpack-plugin": "1.5.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "^24.9.0",
-    "mini-css-extract-plugin": "0.8.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "prettier": "1.18.2",
     "source-map-loader": "0.2.4",
-    "style-loader": "1.0.0",
-    "typescript": "3.5.3",
+    "style-loader": "^1.2.1",
+    "typescript": "^3.9.3",
     "webapp-webpack-plugin": "2.7.1",
     "webpack": "^4.39.2",
-    "webpack-bundle-analyzer": "3.4.1",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
   }
