--- a/client/package.json
+++ b/client/package.json
@@ -17,15 +17,15 @@
     "lang:compile": "lingui compile"
   },
   "dependencies": {
-    "@babel/polyfill": "7.4.4",
-    "@lingui/react": "2.8.3",
+    "@babel/polyfill": "^7.8.7",
+    "@lingui/react": "^2.9.1",
     "@material-ui/core": "^4.3.3",
-    "@material-ui/icons": "4.2.1",
+    "@material-ui/icons": "^4.9.1",
     "@sentry/browser": "^5.6.2",
     "@testing-library/jest-dom": "^4.1.0",
     "@types/lingui__core": "2.7.0",
     "@types/lingui__macro": "2.7.3",
-    "@types/lingui__react": "2.8.0",
+    "@types/lingui__react": "^2.8.2",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
@@ -33,35 +33,35 @@
     "@types/redux-actions": "2.6.1",
     "@types/redux-logger": "3.0.7",
     "@types/styled-components": "4.1.18",
-    "axios": "0.19.0",
-    "connected-react-router": "6.5.2",
+    "axios": "^0.19.2",
+    "connected-react-router": "^6.8.0",
     "core-js": "^3.2.1",
-    "history": "4.9.0",
-    "query-string": "6.8.2",
+    "history": "^4.10.1",
+    "query-string": "^6.12.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-hot-loader": "^4.12.11",
     "react-redux": "^7.1.1",
-    "react-router-dom": "5.0.1",
-    "redux": "4.0.4",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "redux-actions": "2.6.5",
     "redux-logger": "3.0.6",
-    "redux-saga": "1.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "4.3.2",
     "workbox-window": "4.3.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.5.5",
-    "@babel/core": "7.5.5",
-    "@babel/plugin-proposal-class-properties": "7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/preset-env": "7.5.5",
-    "@babel/preset-react": "7.0.0",
-    "@babel/preset-typescript": "7.3.3",
-    "@lingui/cli": "2.8.3",
-    "@lingui/loader": "2.8.3",
-    "@lingui/macro": "2.8.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@lingui/cli": "^2.9.1",
+    "@lingui/loader": "^2.9.1",
+    "@lingui/macro": "^2.9.1",
     "@testing-library/react": "^9.1.3",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.2",
@@ -69,21 +69,21 @@
     "@typescript-eslint/parser": "^2.0.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "8.0.6",
-    "babel-plugin-dynamic-import-node": "2.3.0",
-    "babel-plugin-macros": "2.6.1",
-    "babel-plugin-styled-components": "1.10.6",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-macros": "^2.8.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
-    "css-loader": "3.2.0",
+    "css-loader": "^3.5.3",
     "cypress": "3.6.0",
     "eslint": "^5.10",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-standard": "^14.0.1",
     "eslint-loader": "^3.0.0",
-    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "9.1.0",
-    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-standard": "^4.0.1",
@@ -91,15 +91,15 @@
     "fork-ts-checker-webpack-plugin": "1.5.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "^24.9.0",
-    "mini-css-extract-plugin": "0.8.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "pg-promise": "^9.1.0",
     "prettier": "1.18.2",
     "source-map-loader": "0.2.4",
-    "style-loader": "1.0.0",
-    "typescript": "3.5.3",
+    "style-loader": "^1.2.1",
+    "typescript": "^3.9.3",
     "webapp-webpack-plugin": "2.7.1",
     "webpack": "^4.39.2",
-    "webpack-bundle-analyzer": "3.4.1",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
     "webpack-pwa-manifest": "^4.2.0",
