--- a/graphql/package.json
+++ b/graphql/package.json
@@ -13,29 +13,29 @@
     "build:prod": "NODE_ENV=production babel -d ../build --ignore node_modules ."
   },
   "dependencies": {
-    "@babel/polyfill": "7.4.4",
-    "@babel/runtime": "7.5.5",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/runtime": "^7.9.6",
     "koa": "^2.8.1",
     "koa-cache-control": "2.0.0",
     "koa-proxy": "1.0.0-alpha.3",
     "koa-router": "7.4.0",
-    "request-promise-native": "1.0.7"
+    "request-promise-native": "^1.0.8"
   },
   "devDependencies": {
-    "@babel/cli": "7.5.5",
-    "@babel/core": "7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
-    "@babel/plugin-transform-runtime": "7.5.5",
-    "@babel/preset-env": "7.5.5",
-    "@babel/register": "7.5.5",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.9.0",
     "babel-eslint": "^10.0.3",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "eslint": "^6.2.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.1.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "jest": "^24.9.0",
     "nodemon": "1.19.1",
     "prettier": "1.18.2",
