--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,13 @@
     "axios": "^0.19.2",
     "boom": "7.3.0",
     "bunyan": "1.8.12",
-    "koa": "2.11.0",
+    "koa": "^2.12.0",
     "koa-basic-auth": "4.0.0",
-    "koa-joi-router": "6.0.0",
+    "koa-joi-router": "^6.0.2",
     "koa-qs": "2.0.0",
     "lodash": "4.17.15",
-    "moment": "2.24.0",
-    "moment-timezone": "0.5.26",
+    "moment": "^2.26.0",
+    "moment-timezone": "^0.5.31",
     "mustache": "^3.0.2",
     "pg-promise": "^9.1.0",
     "showdown": "^1.9.1",
@@ -41,13 +41,13 @@
     "@types/cheerio": "^0.22.13",
     "@types/co-body": "0.0.3",
     "@types/jest": "^24.0.18",
-    "@types/joi": "14.3.3",
-    "@types/koa": "2.0.52",
+    "@types/joi": "^14.3.4",
+    "@types/koa": "^2.11.3",
     "@types/koa-basic-auth": "2.0.3",
     "@types/koa-qs": "2.0.0",
-    "@types/koa-router": "7.0.42",
+    "@types/koa-router": "^7.4.1",
     "@types/lodash": "^4.14.137",
-    "@types/moment-timezone": "0.5.12",
+    "@types/moment-timezone": "^0.5.13",
     "@types/mustache": "0.8.32",
     "@types/node": "^12.7.2",
     "@types/pg": "^7.11.0",
@@ -60,15 +60,15 @@
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-standard": "^14.0.1",
-    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "9.1.0",
-    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^24.9.0",
     "prettier": "1.18.2",
     "ts-jest": "24.0.2",
     "ts-node-dev": "1.0.0-pre.40",
-    "typescript": "3.5.3"
+    "typescript": "^3.9.3"
   }
 }
