chore: apply major updates for npm libs

--- a/www/package.json
+++ b/www/package.json
@@ -11,7 +11,7 @@
     "cypress:open": "cypress open"
   },
   "devDependencies": {
-    "cypress": "3.6.0",
+    "cypress": "^4.6.0",
     "http-server": "0.12.3"
   }
 }
