--- a/admin/package.json
+++ b/admin/package.json
@@ -16,26 +16,30 @@
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.9.1",
     "@types/history": "^4.7.3",
+    "@types/lodash": "^4.14.152",
     "@types/qs": "^6.9.3",
+    "@types/query-string": "^5.1.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "@types/redux-actions": "2.6.1",
-    "@types/styled-components": "4.1.18",
+    "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
     "core-js": "^3.2.1",
     "history": "^4.10.1",
     "qs": "^6.8.0",
-    "ra-input-rich-text": "2.9.3",
-    "ra-language-english": "2.9.3",
+    "ra-input-rich-text": "^3.3.1",
+    "ra-language-english": "^3.5.2",
     "react": "^16.13.1",
-    "react-admin": "2.9.6",
+    "react-admin": "^3.5.2",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.11",
-    "react-redux": "5.0.7",
+    "react-redux": "^7.2.0",
     "redux-actions": "2.6.5",
     "redux-saga": "^1.1.3",
-    "styled-components": "4.3.2"
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -46,10 +50,10 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.2",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.5",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
@@ -59,22 +63,22 @@
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "css-loader": "^3.5.3",
-    "eslint": "^5.10",
+    "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-standard": "^14.0.1",
-    "eslint-loader": "^3.0.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-standard": "^4.0.1",
-    "file-loader": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "1.5.0",
-    "html-webpack-plugin": "3.2.0",
-    "jest": "^24.9.0",
+    "file-loader": "^6.0.0",
+    "fork-ts-checker-webpack-plugin": "^4.1.4",
+    "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "prettier": "1.18.2",
+    "prettier": "^2.0.5",
     "source-map-loader": "0.2.4",
     "style-loader": "^1.2.1",
     "typescript": "^3.9.3",
