--- a/client/package.json
+++ b/client/package.json
@@ -22,17 +22,17 @@
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.9.1",
     "@sentry/browser": "^5.6.2",
-    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/jest-dom": "^5.8.0",
     "@types/lingui__core": "2.7.0",
     "@types/lingui__macro": "2.7.3",
     "@types/lingui__react": "^2.8.2",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
-    "@types/react-router-dom": "^4.3.5",
+    "@types/react-router-dom": "^5.1.5",
     "@types/redux-actions": "2.6.1",
     "@types/redux-logger": "3.0.7",
-    "@types/styled-components": "4.1.18",
+    "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
     "core-js": "^3.2.1",
@@ -47,8 +47,8 @@
     "redux-actions": "2.6.5",
     "redux-logger": "3.0.6",
     "redux-saga": "^1.1.3",
-    "styled-components": "4.3.2",
-    "workbox-window": "4.3.1"
+    "styled-components": "^5.1.0",
+    "workbox-window": "^5.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -62,11 +62,11 @@
     "@lingui/cli": "^2.9.1",
     "@lingui/loader": "^2.9.1",
     "@lingui/macro": "^2.9.1",
-    "@testing-library/react": "^9.1.3",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.2",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
+    "@testing-library/react": "^10.0.4",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.5",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
@@ -76,24 +76,24 @@
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "css-loader": "^3.5.3",
-    "cypress": "3.6.0",
-    "eslint": "^5.10",
+    "cypress": "^4.6.0",
+    "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-standard": "^14.0.1",
-    "eslint-loader": "^3.0.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-standard": "^4.0.1",
-    "file-loader": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "1.5.0",
-    "html-webpack-plugin": "3.2.0",
-    "jest": "^24.9.0",
+    "file-loader": "^6.0.0",
+    "fork-ts-checker-webpack-plugin": "^4.1.4",
+    "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "pg-promise": "^9.1.0",
-    "prettier": "1.18.2",
+    "pg-promise": "^10.5.6",
+    "prettier": "^2.0.5",
     "source-map-loader": "0.2.4",
     "style-loader": "^1.2.1",
     "typescript": "^3.9.3",
@@ -103,6 +103,6 @@
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
     "webpack-pwa-manifest": "^4.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "^5.1.3"
   }
 }
