--- a/graphql/package.json
+++ b/graphql/package.json
@@ -18,7 +18,7 @@
     "koa": "^2.8.1",
     "koa-cache-control": "2.0.0",
     "koa-proxy": "1.0.0-alpha.3",
-    "koa-router": "7.4.0",
+    "koa-router": "^8.0.8",
     "request-promise-native": "^1.0.8"
   },
   "devDependencies": {
@@ -31,14 +31,14 @@
     "babel-eslint": "^10.0.3",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
-    "eslint": "^6.2.2",
+    "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "jest": "^24.9.0",
-    "nodemon": "1.19.1",
-    "prettier": "1.18.2",
-    "pretty-quick": "1.11.1"
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1"
   }
 }
