--- a/server/package.json
+++ b/server/package.json
@@ -25,12 +25,12 @@
     "lodash": "4.17.15",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
-    "mustache": "^3.0.2",
-    "pg-promise": "^9.1.0",
+    "mustache": "^4.0.1",
+    "pg-promise": "^10.5.6",
     "showdown": "^1.9.1",
     "stack-trace": "0.0.10",
     "unescape": "1.0.1",
-    "uuid": "^3.3.3"
+    "uuid": "^8.1.0"
   },
   "resolutions": {
     "qs": "~6.3.2"
@@ -39,8 +39,8 @@
     "@types/boom": "7.3.0",
     "@types/bunyan": "1.8.6",
     "@types/cheerio": "^0.22.13",
-    "@types/co-body": "0.0.3",
-    "@types/jest": "^24.0.18",
+    "@types/co-body": "^5.1.0",
+    "@types/jest": "^25.2.3",
     "@types/joi": "^14.3.4",
     "@types/koa": "^2.11.3",
     "@types/koa-basic-auth": "2.0.3",
@@ -48,26 +48,26 @@
     "@types/koa-router": "^7.4.1",
     "@types/lodash": "^4.14.137",
     "@types/moment-timezone": "^0.5.13",
-    "@types/mustache": "0.8.32",
-    "@types/node": "^12.7.2",
+    "@types/mustache": "^4.0.1",
+    "@types/node": "^14.0.5",
     "@types/pg": "^7.11.0",
     "@types/showdown": "1.9.3",
     "@types/stack-trace": "0.0.29",
-    "@types/uuid": "3.4.5",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
+    "@types/uuid": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
     "cheerio": "1.0.0-rc.3",
-    "eslint": "^6.2.2",
+    "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-standard": "^14.0.1",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.9.0",
-    "prettier": "1.18.2",
-    "ts-jest": "24.0.2",
+    "jest": "^26.0.1",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.0.0",
     "ts-node-dev": "1.0.0-pre.40",
     "typescript": "^3.9.3"
   }
