--- a/www/Dockerfile.build
+++ b/www/Dockerfile.build
@@ -33,6 +33,7 @@ LABEL version=${BUILD_VERSION} \
       company=companyname \
       project=full-stack-template \
       role=www
+RUN mkdir -p /service
 WORKDIR /service
 RUN chown -R nginx:nginx /var/cache/nginx && \
     chown -R nginx:nginx /service && \
