--- a/alternatives/client-static/Dockerfile.build
+++ b/alternatives/client-static/Dockerfile.build
@@ -1,11 +1,12 @@
 # Production runtime
-FROM nginx:1.17-alpine
+FROM nginx:1.17-alpine as builder
 ARG SERVICE_DIR=.
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
       company=companyname \
       project=full-stack-template \
       role=client
+RUN mkdir -p /service
 WORKDIR /service
 RUN chown -R nginx:nginx /var/cache/nginx && \
     chown -R nginx:nginx /service && \
